Backport of Bug#45523 "Objects of class base_ilist should not be copyable".

Suppress the compiler-generated public copy constructor
and assignment operator of class base_ilist; instead, implement
move_elements_to() function which transfers ownership of elements
from one list to another.